; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_node.c_tipc_node_remove_router.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_node.c_tipc_node_remove_router.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tipc_node = type { i32, i32* }

@tipc_max_nodes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tipc_node_remove_router(%struct.tipc_node* %0, i32 %1) #0 {
  %3 = alloca %struct.tipc_node*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.tipc_node* %0, %struct.tipc_node** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @tipc_node(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %9 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %66

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = srem i32 %14, 32
  %16 = shl i32 1, %15
  %17 = xor i32 %16, -1
  %18 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %19 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %5, align 4
  %22 = sdiv i32 %21, 32
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %20, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %17, %25
  %27 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %28 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %27, i32 0, i32 1
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %5, align 4
  %31 = sdiv i32 %30, 32
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %29, i64 %32
  store i32 %26, i32* %33, align 4
  %34 = load i32, i32* @tipc_max_nodes, align 4
  %35 = sdiv i32 %34, 32
  %36 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %37 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 8
  br label %38

38:                                               ; preds = %58, %13
  %39 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %40 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = add nsw i32 %41, -1
  store i32 %42, i32* %40, align 8
  %43 = icmp sge i32 %42, 0
  br i1 %43, label %44, label %56

44:                                               ; preds = %38
  %45 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %46 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %45, i32 0, i32 1
  %47 = load i32*, i32** %46, align 8
  %48 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %49 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %47, i64 %51
  %53 = load i32, i32* %52, align 4
  %54 = icmp ne i32 %53, 0
  %55 = xor i1 %54, true
  br label %56

56:                                               ; preds = %44, %38
  %57 = phi i1 [ false, %38 ], [ %55, %44 ]
  br i1 %57, label %58, label %59

58:                                               ; preds = %56
  br label %38

59:                                               ; preds = %56
  %60 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %61 = call i32 @tipc_node_is_up(%struct.tipc_node* %60)
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %66, label %63

63:                                               ; preds = %59
  %64 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %65 = call i32 @node_lost_contact(%struct.tipc_node* %64)
  br label %66

66:                                               ; preds = %12, %63, %59
  ret void
}

declare dso_local i32 @tipc_node(i32) #1

declare dso_local i32 @tipc_node_is_up(%struct.tipc_node*) #1

declare dso_local i32 @node_lost_contact(%struct.tipc_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
